almost finished aside

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,39 @@
   text-decoration: none;
 }
 
-#main-navbar #onpage {
+/* add or remove hover? */
+
+#main-navbar ul li a:hover  {
   background-color: #000;
+}
+
+#main-navbar #onpage {
   text-decoration: underline overline;
 }
+
+#sidebar  {
+  position: fixed;
+  right: 0%;
+  background-color: red;
+  height: 100%;
+  width: 20%;
+}
+
+#sidebar ul {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
+  
+}
+
+#sidebar ul li a {
+  display: block;
+  padding: 15px 0;
+  color: #fff;
+  text-decoration: none;
+}
+
+#sidebar ul li a:hover  {
+  background-color: #000;
+}
+  
